2010-03-18  Eric Ross       <eric.ross.c@gmail.com>

	* godmode/setup/setup.php: Expanded time zone text box to 25 chars

2010-03-18  Eric Ross       <eric.ross.c@gmail.com>

	Ported old graphics for the log4x data.

	* include/Image/Graph/Plot/Bubble.php: New chart type: bubble
	* include/Image/Graph.php: Add the new bubble chart to the available charts
	* include/functions.php: Refactoring way to get type of graph from module type
	* operation/agentes/estado_ultimopaquete.php: Added links to access log4x graphics 
	* include/fgraph.php: Add log4x graphics rutines.
	* operation/agentes/stat_win.php: Add support to show log4x graphic.

2010-03-17  Miguel de Dios  <miguel.dedios@artica.es>

	* include/config_process.php, install.php: change version number.
	* include/functions_ui.php: add in the function "print_page_header" a
	read boolean item "active" in array $buttons for paint disabled.
	* include/functions.php: add function "get_parameterBetweenListValues" this
	function get a parameter for a GET or POST but between a values.
	* godmode/reporting/visual_console_builder.php: added new editors for visual
	console, now it is developing, don't afray.

2010-03-17  Junichi Satoh  <junichi@rworks.jp>

	* operation/messages/message.php : Changed strings.
	"From" to "Message from", "To" to "Message to"

	* godmode/reporting/reporting_builder.php : Changed strings.
	"Down" to "Move down", "Up" to "Move up"

	* godmode/alerts/alert_list.php: Changed sentence with some strings.
	"From XX to YY matches of the alert" to "Number of alerts match	
	from XX to YY"

2010-03-15  Junichi Satoh  <junichi@rworks.jp>

	* godmode/alerts/alert_list.php : Added help link, "alert-matches".

2010-03-12  Sancho Lerena <slerena@artica.es>

	* include/help/es/: Added some missing help files in spanish,
	translated by Julia. Thanks Julia!

	* godmode/groups/modu_group_list.php, 
	godmode/groups/configure_modu_group.php: New module group